# gpui-tea

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  clippy.toml  typos.toml
.github/workflows/: ci.yml  publish.yml
.zed/: settings.json
crates/gpui_tea/: Cargo.toml
crates/gpui_tea/examples/: counter.rs  init_command.rs  keyed_effect.rs  nested_models.rs  observability.rs  subscriptions.rs  telemetry.rs
crates/gpui_tea/examples/utils/: ui.rs
crates/gpui_tea/src/: command.rs  dispatcher.rs  error.rs  key.rs  keyed_tasks.rs  lib.rs  model.rs  program.rs  queue.rs  runtime.rs  scope.rs  subscription.rs  subscription_registry.rs  view.rs
crates/gpui_tea/src/observability/: adapters.rs  config.rs  events.rs  mod.rs  policy.rs
crates/gpui_tea/tests/: derive_ui.rs  runtime_contracts.rs
crates/gpui_tea/tests/ui/: child_without_model.rs  child_without_model.stderr  duplicate_child_extract.rs  duplicate_child_extract.stderr  duplicate_child_lift.rs  duplicate_child_lift.stderr  duplicate_child_path.rs  duplicate_child_path.stderr  duplicate_message.rs  duplicate_message.stderr  duplicate_sibling_child_path.rs  duplicate_sibling_child_path.stderr  dynamic_child_path.rs  dynamic_child_path.stderr  invalid_extract.rs  invalid_extract.stderr  invalid_lift.rs  invalid_lift.stderr  missing_child_extract.rs  missing_child_extract.stderr  missing_message.rs  missing_message.stderr  unsupported_child_attr.rs  unsupported_child_attr.stderr  unsupported_composite_attr.rs  unsupported_composite_attr.stderr
crates/gpui_tea_macros/: Cargo.toml
crates/gpui_tea_macros/src/: expand.rs  lib.rs  parser.rs  spec.rs
examples/: counter.rs  init_command.rs  keyed_effect.rs  nested_models.rs  observability.rs  subscriptions.rs  telemetry.rs
examples/utils/: ui.rs
src/: command.rs  dispatcher.rs  error.rs  lib.rs  nested.rs  observability.rs  program.rs  runtime.rs  subscription.rs  view.rs
tests/: runtime_contracts.rs
