[package]
name = "gpui_tea"
version = "0.1.0"
description = "`gpui_tea` provides the runtime primitives for building TEA-style applications on top of GPUI."
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
authors = ["Ilya Chernichkin <inkwadra.dev@gmail.com>"]
repository = "https://github.com/inkwadra/gpui-tea"
homepage = "https://github.com/inkwadra/gpui-tea"
documentation = "https://docs.rs/gpui_tea"
keywords = ["gpui", "ui", "tea"]
categories = ["development-tools", "gui"]

[features]
default = []
metrics = ["dep:metrics"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
futures = "0.3.32"
gpui = { version = "0.2.2", features = ["test-support"] }
metrics = { version = "0.24.2", optional = true }
thiserror = "2.0.17"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true, features = ["env-filter"] }

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
