[workspace]
members = ["crates/gpui_tea", "crates/gpui_tea_macros"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Ilya Chernichkin <inkwadra.dev@gmail.com>"]
repository = "https://github.com/inkwadra/gpui-tea"
homepage = "https://github.com/inkwadra/gpui-tea"
readme = "README.md"
keywords = ["gpui", "ui", "tea"]
categories = ["development-tools", "gui"]

[workspace.dependencies]
futures = "0.3.32"
gpui = { version = "0.2.2", features = ["test-support"] }
metrics = "0.24.2"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "parsing"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
trybuild = "1.0.111"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
