[package]
name = "gpui_tea"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = ["crates-io"]
documentation = "https://docs.rs/gpui_tea"
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "Runtime primitives for building Elm-style GPUI applications."
include = ["src/**", "examples/**", "tests/**", "Cargo.toml", "../../README.md", "../../LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
metrics = ["dep:metrics"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
futures.workspace = true
gpui.workspace = true
gpui_tea_macros = { version = "0.1.1", path = "../gpui_tea_macros" }
metrics = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
trybuild.workspace = true

[lints]
workspace = true
